toolkit/themes/windows/global/xulscrollbars.css
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
scrollbar
{
-
moz
-
appearance
:
scrollbartrack
-
horizontal
;
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
scrollbar
.
xml
#
scrollbar
"
)
;
cursor
:
default
;
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
scrollbar
/
slider
.
gif
"
)
scrollbar
;
}
scrollbar
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbartrack
-
vertical
;
}
thumb
scrollbarbutton
{
border
:
2px
solid
;
-
moz
-
border
-
top
-
colors
:
ThreeDLightShadow
ThreeDHighlight
;
-
moz
-
border
-
right
-
colors
:
ThreeDDarkShadow
ThreeDShadow
;
-
moz
-
border
-
bottom
-
colors
:
ThreeDDarkShadow
ThreeDShadow
;
-
moz
-
border
-
left
-
colors
:
ThreeDLightShadow
ThreeDHighlight
;
background
-
color
:
-
moz
-
Dialog
;
}
thumb
{
-
moz
-
appearance
:
scrollbarthumb
-
vertical
;
min
-
height
:
8px
;
}
thumb
[
orient
=
"
horizontal
"
]
{
-
moz
-
appearance
:
scrollbarthumb
-
horizontal
;
min
-
width
:
8px
;
}
scrollbarbutton
{
background
:
-
moz
-
Dialog
no
-
repeat
50
%
50
%
;
min
-
width
:
16px
;
min
-
height
:
16px
;
}
scrollbarbutton
:
hover
:
active
scrollbarbutton
[
active
=
"
true
"
]
{
-
moz
-
border
-
top
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
-
moz
-
border
-
right
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
-
moz
-
border
-
bottom
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
-
moz
-
border
-
left
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
background
-
position
:
60
%
60
%
;
}
scrollcorner
{
-
moz
-
binding
:
url
(
chrome
:
/
/
global
/
content
/
bindings
/
scrollbar
.
xml
#
scrollbar
-
base
)
;
width
:
16px
;
cursor
:
default
;
background
-
color
:
-
moz
-
Dialog
;
}
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
right
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
rit
.
gif
"
)
}
scrollbarbutton
[
type
=
"
increment
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
rit
-
dis
.
gif
"
)
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
down
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
dn
.
gif
"
)
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
increment
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
dn
-
dis
.
gif
"
)
}
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
left
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
lft
.
gif
"
)
}
scrollbarbutton
[
type
=
"
decrement
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
lft
-
dis
.
gif
"
)
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
up
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
up
.
gif
"
)
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
decrement
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
up
-
dis
.
gif
"
)
}
media
print
{
html
|
div
scrollbar
{
-
moz
-
appearance
:
scrollbartrack
-
horizontal
;
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
scrollbar
.
xml
#
scrollbar
"
)
;
cursor
:
default
;
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
scrollbar
/
slider
.
gif
"
)
scrollbar
;
}
html
|
div
scrollbar
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbartrack
-
vertical
;
}
html
|
div
thumb
html
|
div
scrollbarbutton
{
border
:
2px
solid
;
-
moz
-
border
-
top
-
colors
:
ThreeDLightShadow
ThreeDHighlight
;
-
moz
-
border
-
right
-
colors
:
ThreeDDarkShadow
ThreeDShadow
;
-
moz
-
border
-
bottom
-
colors
:
ThreeDDarkShadow
ThreeDShadow
;
-
moz
-
border
-
left
-
colors
:
ThreeDLightShadow
ThreeDHighlight
;
background
-
color
:
-
moz
-
Dialog
;
}
html
|
div
thumb
{
-
moz
-
appearance
:
scrollbarthumb
-
vertical
;
min
-
height
:
8px
;
}
html
|
div
thumb
[
orient
=
"
horizontal
"
]
{
-
moz
-
appearance
:
scrollbarthumb
-
horizontal
;
min
-
width
:
8px
;
}
html
|
div
scrollbarbutton
{
background
:
-
moz
-
Dialog
no
-
repeat
50
%
50
%
;
min
-
width
:
16px
;
min
-
height
:
16px
;
}
html
|
div
scrollbarbutton
:
hover
:
active
html
|
div
scrollbarbutton
[
active
=
"
true
"
]
{
-
moz
-
border
-
top
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
-
moz
-
border
-
right
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
-
moz
-
border
-
bottom
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
-
moz
-
border
-
left
-
colors
:
ThreeDShadow
-
moz
-
Dialog
;
background
-
position
:
60
%
60
%
;
}
html
|
div
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
right
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
rit
.
gif
"
)
}
html
|
div
scrollbarbutton
[
type
=
"
increment
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
rit
-
dis
.
gif
"
)
}
html
|
div
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
down
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
dn
.
gif
"
)
}
html
|
div
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
increment
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
dn
-
dis
.
gif
"
)
}
html
|
div
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
left
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
lft
.
gif
"
)
}
html
|
div
scrollbarbutton
[
type
=
"
decrement
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
lft
-
dis
.
gif
"
)
}
html
|
div
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
up
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
up
.
gif
"
)
}
html
|
div
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
decrement
"
]
[
disabled
=
"
true
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
arrow
-
up
-
dis
.
gif
"
)
}
}

